# converse-ai-website-staging

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts  vitest.config.ts
api/: _noindex.ts  check-url.ts  country.ts  serve-blog.ts  sitemap-blogs.ts  sitemap.ts  xai-realtime-token.test.ts  xai-realtime-token.ts
assistant-service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
assistant-service/app/: config.py  main.py
assistant-service/app/api/: assistant.py  dependencies.py  health.py
assistant-service/app/core/: cancellation.py  concurrency.py  error_mapping.py  errors.py  logging.py  rate_limit.py  request_context.py
assistant-service/app/models/: events.py  llm.py  requests.py  responses.py
assistant-service/app/services/extensions/: history.py  page_context.py  retrieval.py  speech.py  tools.py
assistant-service/app/services/llm/: base.py  openai_compatible.py
assistant-service/app/services/orchestrator/: assistant_orchestrator.py  system_prompt.py
assistant-service/tests/: conftest.py  test_concurrency.py  test_config.py  test_health.py  test_llm_adapter.py  test_orchestrator.py  test_rate_limit.py  test_readiness.py  test_request_validation.py  test_security.py  test_streaming.py
docs/: assistant-phase-0.md
public/: blog-template.html  footer-template.html  llms.txt  robots.txt  sitemap.xml
scripts/: prerender.mjs
src/: App.tsx  entry-server.tsx  index.css  vite-env.d.ts
src/components/: BlogListenControl.css  Footer.tsx  (+12 more)
supabase/: config.toml  seed.sql
(+187 files in other folders)
